# scion

./: .hgignore  scion.cabal
emacs/: scion.el
lib/Scion/: Backend.hs  Ghc.hs  Inspect.hs
lib/Scion/Inspect/: DefinitionSite.hs  Find.hs  TypeOf.hs
lib/Scion/Types/: Notes.hs
server/Scion/Server/: Commands.hs
