name:            scion
version:         0.2.0.2
license:         BSD3
license-file:    docs/LICENSE
author:          Thomas Schilling <nominolo@googlemail.com>
maintainer:      Thomas Schilling <nominolo@googlemail.com>
homepage:        http://github.com/nominolo/scion
synopsis:        Haskell IDE library
bug-reports:     http://code.google.com/p/scion-lib/issues/list
description:
  Scion is a Haskell library that aims to implement those parts of a
  Haskell IDE which are independent of a particular front-end.  Scion
  is based on the GHC API and Cabal.  It provides both a Haskell API and
  a server for non-Haskell clients such as Emacs and Vim.
  .
  See the homepage <http://code.google.com/p/scion-lib> and the README
  <http://github.com/nominolo/scion/blob/master/README.markdown> for
  more information.

category:        Development
stability:       provisional
build-type:      Simple

cabal-version:   >= 1.6
extra-source-files: README.markdown
data-files:
  emacs/*.el

flag testing
  description: Enable Debugging things like QuickCheck properties, etc.
  default: False

flag server
  description: Install the scion-server.
  default: True

flag cabal_1_8
  description: Enable the Cabal library 1.8 features
  default: False

flag cabal_1_10
  description: Enable the Cabal library 1.10 features
  default: True

source-repository head
  type: git
  location: http://github.com/nominolo/scion

library
  build-depends:
    base         == 4.*,
    filepath,
    ghc-paths    == 0.1.*,
    json         == 0.4.*,
    multiset     >= 0.1 && < 0.3,
    uniplate     == 1.6.*,
    list-tries,
    binary       == 0.5.*,
    array        >= 0.2 && < 0.4,
    text,
    old-time     == 1.0.*

  if impl(ghc >= 7.0)
    build-depends:
      ghc          >= 7,
      syb,
      ghc-syb-utils>= 0.2.1,
      directory    == 1.1.*,
      time         == 1.2.*,
      containers   >= 0.2 && < 0.5
  else
    build-depends:
      ghc          >= 6.12 && < 6.13,
      ghc-syb,
      ghc-syb-utils,
      directory    == 1.0.*,
      time         == 1.1.*,
      containers   >= 0.2 && < 0.4

  if flag(cabal_1_10)
    build-depends:  Cabal == 1.10.*
    cpp-options:    -DCABAL_VERSION=110
  else
    if flag(cabal_1_8)
      build-depends:  Cabal == 1.8.*
      cpp-options:    -DCABAL_VERSION=108
    else
      build-depends:  Cabal == 1.6.*
      cpp-options:    -DCABAL_VERSION=106

  hs-source-dirs:  lib
  extensions:      CPP, PatternGuards
  exposed-modules:
    Scion.Types,
    Scion.Types.ExtraInstances,
    Scion.Types.Notes,
    Scion.Types.Outline,
    Scion.Inspect,
    Scion.Inspect.Find,
    Scion.Inspect.TypeOf,
    Scion.Inspect.DefinitionSite,
    Scion.Inspect.PackageDB,
    Scion.Utils,
    Scion.Session,
    Scion.Backend,
    Scion.Cabal,
    Scion.Ghc,
    Scion

  if flag(testing)
    build-depends: QuickCheck == 2.*
    cpp-options:   -DSCION_DEBUG

  if impl(ghc >= 6.12)
    cpp-options:   -DHAVE_PACKAGE_DB_MODULES

  if impl(ghc == 6.12.*)
    cpp-options:   -DGHC_VERSION=612

  if impl(ghc == 7.0.*)
    cpp-options:   -DGHC_VERSION=700

  ghc-options:  -Wall -fno-warn-unused-do-bind

executable scion-server
  if !flag(server)
    buildable: False

  main-is: Main.hs
  hs-source-dirs: lib server

  build-depends:
    -- from library
    base         == 4.*,
    filepath,
    ghc-paths    == 0.1.*,
    json         == 0.4.*,
    multiset     >= 0.1 && < 0.3,
    uniplate     == 1.6.*,
    list-tries,
    binary       == 0.5.*,
    array        >= 0.2 && < 0.4,
    text,
    old-time     == 1.0.*

  if impl(ghc >= 7.0)
    build-depends:
      ghc          >= 7,
      syb,
      ghc-syb-utils>= 0.2.1,
      directory    == 1.1.*,
      time         == 1.2.*,
      containers   >= 0.2 && < 0.5
  else
    build-depends:
      ghc          >= 6.12 && < 6.13,
      ghc-syb,
      ghc-syb-utils,
      directory    == 1.0.*,
      time         == 1.1.*,
      containers   >= 0.2 && < 0.4

  if flag(cabal_1_10)
    build-depends:  Cabal == 1.10.*
    cpp-options:    -DCABAL_VERSION=110
  else
    if flag(cabal_1_8)
      build-depends:  Cabal == 1.8.*
      cpp-options:    -DCABAL_VERSION=108
    else
      build-depends:  Cabal == 1.6.*
      cpp-options:    -DCABAL_VERSION=106

  if flag(server)
    if impl(ghc >= 7.0)
      build-depends:
        network    >= 2.3
    else
      build-depends:
        network    >= 2.1 && < 2.3,
        network-bytestring == 0.1.*

    build-depends:
      -- Server only
      bytestring   == 0.9.*,
      utf8-string  == 0.3.*,
      hslogger

  other-modules:
    Scion
    Scion.Cabal
    Scion.Inspect
    Scion.Inspect.DefinitionSite
    Scion.Session
    Scion.Types
    Scion.Types.Notes
    Scion.Utils
    Scion.Ghc

    Scion.Server.Commands
    Scion.Server.ConnectionIO
    Scion.Server.Generic
    Scion.Server.Protocol

  ghc-options: -Wall
  extensions:      CPP, PatternGuards

  if flag(testing)
    build-depends: QuickCheck == 2.*
    cpp-options:   -DSCION_DEBUG

  if impl(ghc >= 6.12)
    cpp-options:   -DHAVE_PACKAGE_DB_MODULES

  if impl(ghc == 6.12.*)
    cpp-options:   -DGHC_VERSION=612

  if impl(ghc == 7.0.*)
    cpp-options:   -DGHC_VERSION=700
